vlib/v/checker/tests/sumtype_variant_mismatch.vv
type Any = ?int | string
type Any2 = ?int | ?string

_ := ?Any(?string('baz'))
_ := ?Any(string('baz'))
_ := ?Any('baz')

_ := ?Any2(?string('baz'))
_ := ?Any2(string('baz'))
_ := ?Any2('baz')
